# thalamus-merfish-analysis

./: .gitignore  README.md  ccf_plots_old.py  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer_driver.json
.streamlit/: config.toml
code/: 1_load_thalamus_data.ipynb  1a_load_thalamus_data_standard.ipynb  1b_load_thalamus_data_custom.ipynb  4_metrics_nucleus_celltype_diversity_eroded.ipynb  5_view_nmf_nsf_results.ipynb  6_view_spagcn_results.ipynb  7_export_thalamus_data_for_cirrocumulus.ipynb  Build_AnnData_DLPFC_for_CELLxGENE_Kyle.ipynb  S2_manuscript_figures.ipynb  _abc_cluster_alias_version_mapping.ipynb  _quicknii_ingest_spatialdata.ipynb  _thalamus_cirrocumulus_compatible_h5ad.ipynb  abc thalamus spatial subset.ipynb  abc_cluster_alias_version_mapping.ipynb  abc_import_yoh.ipynb  abc_load.py  abc_thalamus_load_SpaceHack.py  abc_v20230830_characterization.ipynb  abc_v20230830_contents.ipynb  brain1_vs_brain3_gene_qc.ipynb  brain3 ccf views - release version - MT temp.ipynb  brain3 ccf views.ipynb  brain3_cell_type_metrics.ipynb  brain3_cell_type_metrics_realigned.ipynb  ccf registration images.ipynb  ccf_images.py  ccf_plots.py  ccf_polygons.py  ccf_refinement_ingest.ipynb  ccf_registration.py  ccf_transforms.py  cluster distinctness ABC.ipynb  cluster distinctness.ipynb  cluster_label_views.ipynb  devccf_integration.ipynb  discrepancies_in_gene_expr_brain1_vs_brain3.ipynb  dprime.py  main.py  marker_gene_compilation_from_literature.ipynb  marker_genes_to_check.ipynb  (+29 more)
environment/: CO_new_capsule_init.sh  Dockerfile  attach_data_assets.py  (+5 more)
(+84 files in other folders)
