[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thalamus-merfish-analysis"
description = "Shared tools for accessing and processing ABC Atlas MERSCOPE data."
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "anndata",
    "fastparquet",
    "nibabel",
]

# [tool.setuptools.packages.find]
# where = ["code"]
[tool.setuptools]
packages = ["thalamus_merfish_analysis"]

[tool.setuptools.package-dir]
thalamus_merfish_analysis = "code"

[tool.setuptools_scm]
